--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.6.0",
+    "bullmq": "^5.66.4",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
@@ -45,7 +46,7 @@
     "express-rate-limit": "^8.0.1",
     "groq-sdk": "^0.30.0",
     "helmet": "^8.1.0",
-    "ioredis": "^5.7.0",
+    "ioredis": "^5.8.2",
     "mongoose": "^8.0.0",
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.2",
