--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "worker": "node fill-threshold.js",
     "test": "echo \"No tests specified\" && exit 0",
     "build": "echo 'No build step required for Node.js backend'",
     "vercel-build": "echo 'Build complete'",
@@ -37,7 +38,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
-    "axios": "^1.6.0",
+    "axios": "^1.7.0",
     "bullmq": "^5.66.4",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
